maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:48: error: identifier expected but '(' found.
def numeroterLesCases((XBiscuit:Int, YBiscuit:Int))
                      ^JediEscaper:85: error: ':' expected but '}' found.
}
^